Analyze raw data compression schemes

--- a/notebooks/19_la_inspect_demos.ipynb
+++ b/notebooks/19_la_inspect_demos.ipynb
@@ -490,17 +490,350 @@
     "\n",
     "for i in range(len(image_arrays)):\n",
     "    image_arrays[i] = np.concatenate(\n",
-    "        (image_arrays[i], np.zeros((max_len - len(image_arrays[i]), 224, 224, 3), dtype=np.uint8))\n",
+    "        (\n",
+    "            image_arrays[i],\n",
+    "            np.zeros((max_len - len(image_arrays[i]), 224, 224, 3), dtype=np.uint8),\n",
+    "        )\n",
     "    )\n",
     "\n",
     "print([a.shape for a in image_arrays])\n",
     "# Concatenate the image_arrays in a 2 by 5 grid\n",
-    "rows = [np.concatenate(image_arrays[i : i + 10 // 2], axis=2) for i in range(0, 10, 10 // 2)]\n",
+    "rows = [\n",
+    "    np.concatenate(image_arrays[i : i + 10 // 2], axis=2) for i in range(0, 10, 10 // 2)\n",
+    "]\n",
     "\n",
     "# Concatenate the rows\n",
     "grid = np.concatenate(rows, axis=1)\n",
     "# make a video\n",
-    "create_mp4(grid, \"lamp_10_no_noop.mp4\", fps=10)\n"
+    "create_mp4(grid, \"lamp_10_no_noop.mp4\", fps=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Look at rollout demos from January 19, 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The history saving thread hit an unexpected error (OperationalError('attempt to write a readonly database')).History will not be written to the database.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pickle\n",
+    "import numpy as np\n",
+    "from pathlib import Path\n",
+    "\n",
+    "from src.visualization.render_mp4 import mp4_from_pickle_jupyter\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pkl_folder = Path(os.environ[\"DATA_DIR_RAW\"]) / \"raw\" / \"sim\" / \"rollout\" / \"one_leg\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pkls = sorted(list(pkl_folder.rglob(\"*.pkl\")))\n",
+    "\n",
+    "len(pkls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_0_failure.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_0_failure.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_1_failure.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_1_failure.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_2_failure.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_2_failure.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_0_failure.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_0_failure.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_1_failure.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_1_failure.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_2_failure.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_2_failure.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_3_failure.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_3_failure.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_4_success.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_4_success.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_5_failure.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_5_failure.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_6_failure.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_6_failure.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_7_failure.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_7_failure.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_8_failure.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_8_failure.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_9_failure.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_9_failure.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Make video of all the pkls\n",
+    "for i, pkl in enumerate(pkls):\n",
+    "    video = mp4_from_pickle_jupyter(pkl, f\"tmp_{pkl.stem}.mp4\")\n",
+    "    display(video)"
    ]
   },
   {
