--- a/notebooks/19_la_inspect_demos.ipynb
+++ b/notebooks/19_la_inspect_demos.ipynb
@@ -576,22 +576,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 4 pkls\n",
+      "Found 69 pkls\n",
       "(240, 320, 3) (240, 320, 3)\n",
-      "File saved as /data/scratch/ankile/tmp/tmp_2024-01-20T18:56:14.pkl.mp4\n"
+      "File saved as /data/scratch/ankile/tmp/tmp_2024-01-20-16:46:18.pkl.mp4\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<video controls src=\"/data/scratch/ankile/tmp/tmp_2024-01-20T18:56:14.pkl.mp4\" width=\"640\" height=\"480\"></video>"
+       "<video controls src=\"/data/scratch/ankile/tmp/tmp_2024-01-20-16:46:18.pkl.mp4\" width=\"640\" height=\"480\"></video>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -603,7 +603,7 @@
    ],
    "source": [
     "pkl_folder = (\n",
-    "    Path(os.environ[\"DATA_DIR_RAW\"]) / \"raw\" / \"sim\" / \"one_leg\" / \"rollout\" / \"low\"\n",
+    "    Path(os.environ[\"DATA_DIR_RAW\"]) / \"raw\" / \"sim\" / \"one_leg\" / \"scripted\" / \"low\"\n",
     ")\n",
     "ts = \"\"\n",
     "\n",
